fix: correct typo

--- a/views/index.html
+++ b/views/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <h1>Aton Fullstack Internship</h1>
+    <h1>Aton Fullstack Internship API</h1>
   </body>
 </html>
